# netlist-paths

./: .buildinfo  .gitignore  .gitmodules  .readthedocs.yml  CMakeLists.txt  LICENSE  README.md  add_executable_prefix.cmake  genindex.html  index.html  main.cpp  objects.inv  search.html  searchindex.js  version.txt
.doctrees/: environment.pickle  index.doctree
.github/workflows/: build-and-test.yml
_sources/: index.rst.txt
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  requirements.txt
examples/: list_registers.py  mux2.sv  pipestage.sv
include/: netlist_paths.hpp
include/netlist_paths/: AnalyseGraph.hpp  CompileGraph.hpp  DTypes.hpp  Debug.hpp  Edge.hpp  Exception.hpp  Graph.hpp  InternalGraph.hpp  Location.hpp  Netlist.hpp  NetlistPaths.hpp  Options.hpp  Path.hpp  ReadVerilatorXML.hpp  RunVerilator.hpp  Utilities.hpp  Vertex.hpp  Waypoints.hpp  utilities.hpp
lib/: CMakeLists.txt
lib/netlist_paths/: AnalyseGraph.cpp  CMakeLists.txt  CompileGraph.cpp  Graph.cpp  Netlist.cpp  NetlistPaths.cpp  Options.cpp  Path.cpp  ReadVerilatorXML.cpp  ReadVerilatorXML.hpp  RunVerilator.cpp  python_wrapper.cpp
tests/: CMakeLists.txt  DTypeTests.cpp  NameTests.cpp  PathTests.cpp  TestContext.hpp  VerilatorXMLTests.cpp  VertexTests.cpp  adder.sv  analyse_graph.cpp  basic_modules.cpp  basic_test.py  compile_graph.cpp  counter.sv  definitions.hpp.in  definitions.py.in  fsm.sv  mux2.sv  py_wrapper_tests.py  tool_tests.py  unit_tests.cpp
tests/integration/: CMakeLists.txt  definitions.py.in  py_wrapper_tests.py  tool_tests.py
tests/unit/: CMakeLists.txt  DTypeTests.cpp  NameTests.cpp  PathAllTests.cpp  PathAvoidTests.cpp  PathComponentsTests.cpp  PathExistsTests.cpp  PathFanInOutTests.cpp  PathMatchAnyTests.cpp  PathRegOutputsTests.cpp  PathStartFinishAliasesTests.cpp  PathTests.cpp  PathThroughPointsTests.cpp  PathThroughRegsTests.cpp  TestContext.hpp  VerilatorXMLTests.cpp  VertexTests.cpp  VlvboundTest.cpp  definitions.hpp.in  main.cpp
tests/verilog/: adder.sv  alias_start_point.sv  aliases_sub_comb.sv  aliases_sub_reg.sv  basic_assign_chain.sv  basic_comb_chain.sv  basic_ff_chain.sv  basic_shared_comb.sv  basic_types.sv  counter.sv  dtypes.sv  empty_module.sv  fan_out_in.sv  fan_out_in_modules.sv  fsm.sv  interface_no_inline.sv  module_class_inline.sv  module_class_no_inline.sv  module_interface_inline.sv  module_no_inline.sv  module_no_inline_pragma.sv  multiple_defines.sv  multiple_files.sv  multiple_includes.sv  multiple_paths.sv  multiple_separate_paths.sv  one_avoid_point.sv  orphan_package.sv  pipeline.sv  pipeline_loops.sv  pipeline_module.sv  pipeline_no_loops.sv  public_module_no_inline.sv  registered_output.sv  registered_output_nested.sv  registered_output_path.sv  ripple_carry_adder.sv  single_define.sv  single_include.sv  three_multi_path_stages.sv  (+4 more)
tests/verilog/include_a/: include_a.sv
tests/verilog/include_b/: include_b.sv
tests/xml/: assign_alias_regs.xml  dtype_forward_refs.xml
tools/: CMakeLists.txt  definitions.py.in  main.cpp  netlist_paths.py
tools/netlist-paths/: CMakeLists.txt  main.cpp  netlist_paths.py
